--- a/templates/add.html
+++ b/templates/add.html
@@ -10,12 +10,12 @@
 
     <form action="/add" method="POST">
         <label for="author">Author:</label>
-        <input type="text" id="author" name="author" required>
+        <input type="text" id="author" name="author" placeholder="enter author" required>
         <label for="title">Title:</label>
-        <input type="text" id="title" name="title" required>
+        <input type="text" id="title" name="title" placeholder="enter title" required>
         <br><br>
         <label for="content">Content:</label>
-        <input type="text" id="content" name="content" required>
+        <input type="text" id="content" name="content" placeholder="enter content" required>
         <br><br>
         <input type="submit" value="Submit">
     </form>
